Fixed Responsive nagigation on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,16 @@
 
 }
 
-html {
+html, body{
     font-size: 20px;
     font-family: 'Lato', sans-serif;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    overflow-x: hidden;  /*Removed the horizontal scroll*/
 
-    
 }
+
 
 
 
@@ -31,7 +31,10 @@ body {
 nav {
     background-color: #414b53;
     border-bottom: 2px solid #00c6ff;
+
 }
+
+
 
 .main-nav {
     float: right;
@@ -39,12 +42,14 @@ nav {
     margin-top: 2%;
     margin-right: 7%;
     margin-bottom: 2%;
+
 }
 
 .main-nav li {
     display: inline;
     margin-left: 30px;
     font-family: 'Ubuntu', sans-serif;
+
 }
 
 .main-nav li a {
@@ -90,25 +95,27 @@ nav {
 
 /*Sticky Nav*/
 
+
 .sticky-nav {
     position: fixed;
     top: 0;
+    left:0;
     width: 100%;
-    height: 90px;
-    box-shadow: 0 3px 2px #f1dede;
-    z-index: 1000;
+    box-shadow: 0 3px 2px #2ddbcd;
+    z-index: 99999;
 }
 
 
 .sticky-nav #name-logo {
     height: 60px;
     margin-top: 0.5%;
-    margin-bottom: 0.5%;
 }
 
 .sticky-nav .main-nav{
-    margin-top: 1.7%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
+
 
 
 /********************************************************/
@@ -558,11 +565,10 @@ footer p {
 
 
 
-
-
 /**************************************************************************************************************/
                         /*MEDIA QUERIES*/
 /**************************************************************************************************************/
+
 
 
 @media screen and (max-width: 1029px) { /*--------------------------------------------*/
@@ -700,10 +706,23 @@ footer p {
 
 
 
-@media screen and (max-width: 530px) { /*--------------------------------------------------*/
+@media screen and (max-width: 529px) { /*--------------------------------------------------*/
 
     /*NAVIGATION*/
+
+
+    .main-nav {
+        display: none;
+     
+    }
+   
     
+    .show-nav {
+        display: block;
+
+    }
+    
+
     
     .main-nav li {
         display: block;
@@ -715,18 +734,13 @@ footer p {
         color: #fff;
         display: block;
     }
-
-    .main-nav {
-        display: none;
+    
+    
+    .sticky-nav .menu-handle {
+        margin-top: -20px;
     }
-
-    .expand-nav {
-        display: block;
-        width: 100%;
-        
-    }
-
-
+    
+  
 
 
     /* Front section*/
